# python-learning-series

./: README.md  pyproject.toml
Week1/: Dungeon_Game.py
Week2/: Main.py  Student.py  Utils.py
Week3/: Main.py  book_manager.py  books.json  file_utils.py  test_book_manager.py
Week3/.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
