[project]
name = "python-learning-series"
version = "0.1.0"
description = "Weekly Python Projects"
authors = [
    {name = "dani-ruby",email = "danilo.sruberti@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
